BC004 - Horizontal scroll - Investment Process card Bug https://sagittarius.atlassian.net/browse/LDC-1471

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_investment-card.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_investment-card.sass
@@ -28,6 +28,7 @@
     display: block
     box-shadow: 0px 10px 20px #c4c5c7f7
     margin: 32px auto
+    width: 100%
     &:hover
         color: $black
     @include breakpoint(desktop-large, up)
